[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-tracker"
version = "1.0.0"
description = "Personal Budget Tracker - A CLI application for managing personal finances"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]

[project.urls]
Homepage = "https://github.com/example/budget-tracker"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.14.14",
]
